--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,19 @@
       <artifactId>commons-fileupload</artifactId>
       <version>1.3.3</version>
     </dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.json/json -->
+	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20180813</version>
+	</dependency>
+
+	<dependency>
+	  	<groupId>com.fasterxml.jackson.core</groupId>
+	  	<artifactId>jackson-annotations</artifactId>
+	  	<version>2.9.6</version>
+	</dependency>
   
 <!--     <dependency> -->
 <!--       <groupId>javax.servlet</groupId> -->
